<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Space Shooter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about__game_">About Game</string>
    <string name="title_activity_exit_">Exit</string>
    <string name="title_activity_instructions_">Instructions</string>
    <string name="title_activity_play_">Play</string>
    <string name="title_activity_scores_">Scores</string>
    <string name="title_activity_settings_">Settings</string>
    <string name="top_score_string">top score</string>
    <string name="player1_name_string">player1</string>
    <string name="player1_score_string">score1</string>
    <string name="player2_name_string">player2</string>
    <string name="player2_score_string">score2</string>
    <string name="player3_name_string">player3</string>
    <string name="player3_score_string">score3</string>
    <string name="player4_name_string">player4</string>
    <string name="player4_score_string">score4</string>
    <string name="player5_name_string">player5</string>
    <string name="player5_score_string">score5</string>
    <string name="player6_name_string">player6</string>
    <string name="player6_score_string">score6</string>
    <string name="player7_name_string">player7</string>
    <string name="player7_score_string">score7</string>
    <string name="player8_name_string">player8</string>
    <string name="player8_score_string">score8</string>
    <string name="player9_score_string">score9</string>
    <string name="player9_name_string">player9</string>
    <string name="player10_score_string">score10</string>
    <string name="player10_name_string">player10</string>
    <string name="instructions_in_About_GamePage_in_Menu_string">Instructions</string>
    <string name="play_in_About_GamePage_in_Menu_string">Play</string>
    <string name="settings_in_About_GamePage_in_string">Settings</string>
    <string name="scores_in_About_GamePage_Menu_string">Scores</string>
    <string name="startpage_in_About_GamePage_Menu_string">Main Menu</string>
    <string name="about_game_in_InstructionsPage_in_Menu_string">About Game</string>
    <string name="play_in_InstructionsPage_in_Menu_string">Play</string>
    <string name="settings_in_InstructionsPage_in_Menu_string">Settings</string>
    <string name="scores_in_InstructionsPage_in_Menu_string">Scores</string>
    <string name="startpage_in_InstructionsPage_Menu_string">Main Menu</string>
    <string name="settings_in_PlayPage_in_Menu_string">Settings</string>
    <string name="scores_in_PlayPage_in_Menu_string">Scores</string>
    <string name="startpage_in_PlayPage_Menu_string">Main Menu</string>
    <string name="about_game_in_ScoresPage_in_Menu_string">About Game</string>
    <string name="play_in_ScoresPage_in_Menu_string">Play</string>
    <string name="settings_in_ScoresPage_in_Menu_string">Settings</string>
    <string name="instructions_in_ScoresPage_in_Menu_string">Instructions</string>
    <string name="startpage_in_ScoresPage_Menu_string">Main Menu</string>
    <string name="about_game_in_SettingsPage_in_Menu_string">About Game</string>
    <string name="play_in_SettingsPage_in_Menu_string">Play</string>
    <string name="scores_in_SettingsPage_in_Menu_string">Scores</string>
    <string name="instructions_in_SettingsPage_in_Menu_string">Instructions</string>
    <string name="startpage_in_SettingsPage_Menu_string">Main Menu</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="myScoreString">00</string>
    <string name="myLifeString">0</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_list_view_test">ListViewTest</string>
    <string name="lastPlayerScoreString">last score</string>
    <string name="topScoreString">top score</string>
    <string name="title_activity_scores_activity_test">Scores</string>

</resources>
